add footer, add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,12 @@
             {{ content }}
           </section>
         </div>
+
+        {% include footer.html %}
       </div>
     </div>
 
+    {% include google-analytics.html %}
     <script src="/javascripts/scale.fix.js"></script>
   </body>
 
