add uglifier and jekyll assets to compressed js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     </div>
 
     {% include google-analytics.html %}
-    <script src="/javascripts/scale.fix.js"></script>
+    {% js "js/scale.fix.js" %}
   </body>
 
 </html>
