--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,26 @@
 
     {% img images/arda.jpg magick:resize:200x300 magick:quality:78 %}
 
+    <p>Available in:</p>
     <ul>
       {% for my_page in site.pages %}
       {% if my_page.title %}
       <li>
         <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">
           <strong>{{ my_page.title }}</strong>
+        </a>
+      </li>
+      {% endif %}
+      {% endfor %}
+    </ul>
+
+    <p>Resume files:</p>
+    <ul>
+      {% for my_file in site.files[page.language] %}
+      {% if my_file.title %}
+      <li>
+        <a class="page-link" href="{{ my_file.url | prepend: site.baseurl }}">
+          <strong>{{ my_file.title }}</strong>
         </a>
       </li>
       {% endif %}
