add japanese resumes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
       {% if my_page.title %}
       <li>
         <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">
-          <strong>{{ my_page.title }}</strong>
+          <strong>{{ my_page.language }}</strong>
         </a>
       </li>
       {% endif %}
