--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,26 +10,28 @@
     <p>Available in:</p>
     <ul>
       {% for my_page in site.pages %}
-      {% if my_page.title %}
+        {% if my_page.title %}
       <li>
         <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">
           <strong>{{ my_page.language }}</strong>
         </a>
       </li>
-      {% endif %}
+        {% endif %}
       {% endfor %}
     </ul>
 
     <p>Resume files:</p>
     <ul>
-      {% for my_file in site.files[page.language] %}
-      {% if my_file.title %}
+      {% for lang in site.files.langs[page.language] %}
+        {% if lang.id %}
+          {% for format in site.files.formats %}
       <li>
-        <a class="page-link" href="{{ my_file.url | prepend: site.baseurl }}">
-          <strong>{{ my_file.title }}</strong>
+        <a class="page-link" href="https://docs.google.com/document/d/{{ lang.id }}/{{ format.params }}">
+          <strong>{{ format.title }}</strong>
         </a>
       </li>
-      {% endif %}
+          {% endfor %}
+        {% endif %}
       {% endfor %}
     </ul>
 
